--- a/package.json
+++ b/package.json
@@ -24,11 +24,14 @@
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/swagger": "^11.1.5",
     "@prisma/client": "^6.6.0",
+    "class-validator": "^0.14.1",
     "multer": "^1.4.5-lts.2",
     "multer-s3": "^3.0.1",
     "reflect-metadata": "^0.2.0",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "swagger-ui-express": "^5.0.1"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
